Reversion de archivo Ci/Cd

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,18 +13,26 @@ jobs:
       - name: 📥 Clonar el repositorio
         uses: actions/checkout@v3
 
-      - name: ⚙ Remover el containered existente
+      - name: ⚙ Remover containerd y limpiar el sistema
         run: |
           sudo apt-get remove -y containerd
           sudo apt-get purge -y containerd
+          sudo dpkg --purge containerd
           sudo rm -rf /var/lib/containerd
           sudo rm -rf /etc/containerd
+          sudo apt autoremove -y
+          sudo apt autoclean
 
-      - name: ⚙ Configurar Docker
+      - name: ⚙ Configurar Docker desde los repositorios oficiales
         run: |
           sudo apt update
-          sudo apt install -y containerd.io
-          sudo apt install -y docker.io docker-compose
+          sudo apt install -y ca-certificates curl
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
           sudo systemctl start docker
 
       - name: 🛠 Construir y desplegar el contenedor
